# Twillio-Contacts

./: .gitmodules  README.md  install.sh
Android/: Contact.java  ContactSdk.java
Android/TwilioContacts/app/: CMakeLists.txt  build.gradle
Android/TwilioContacts/app/src/androidTest/java/com/zackmatthews/twiliocontacts/: ContactSDKTests.java  ExampleInstrumentedTest.java
Android/TwilioContacts/app/src/main/: AndroidManifest.xml
Android/TwilioContacts/app/src/main/cpp/: base-contact-sdk.cpp  base-contact-sdk.h  contact-lib.cpp  native-lib.cpp
Android/TwilioContacts/app/src/main/cpp/rapidjson/: document.h
Android/TwilioContacts/app/src/main/java/com/zackmatthews/twiliocontacts/: MainActivity.java
Android/TwilioContacts/app/src/main/java/com/zackmatthews/twiliocontacts/adapters/: ContactListAdapater.java
Android/TwilioContacts/app/src/main/java/com/zackmatthews/twiliocontacts/manager/: ContactSdk.java
Android/TwilioContacts/app/src/main/java/com/zackmatthews/twiliocontacts/models/: Contact.java
Android/TwilioContacts/app/src/main/res/layout/: activity_main.xml  add_contact_menu.xml  contact_row.xml
Android/TwilioContacts/app/src/main/res/values/: strings.xml
Android/TwilioContacts/app/src/test/java/com/zackmatthews/twiliocontacts/: ExampleUnitTest.java
Cpp/: .Makefile.swp  Makefile  build.sh
Cpp/src/: .base-contact-sdk.cpp.swp  base-contact-sdk.cpp  main.cpp
Cpp/src/inc/: base-contact-sdk.h
iOS/TwilioContacts/TwilioContacts/: AppDelegate.h  AppDelegate.m  MainViewController.h  (+3 more)
iOS/TwilioContacts/TwilioContacts.xcodeproj/: project.pbxproj
(+21 files in other folders)
